# search-scrape

./: .gitignore  HISTORY_FEATURE.md  README.md  VSCODE_SETUP.md  docker-compose.yml  vscode_mcp_config.json
mcp-server/: Cargo.toml  Dockerfile
mcp-server/src/: history.rs  lib.rs  main.rs  mcp.rs  query_rewriter.rs  rust_scraper.rs  scrape.rs  search.rs  stdio_service.rs  types.rs
sample-results/: history.txt  scrape_url.txt  scrape_url_json.txt  search_web.txt
searxng/: settings.yml  uwsgi.ini
